--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <title>HTML Images</title>
   </head>
   <body>
-    <!-- Your code here -->
+    <img src= "https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+    />
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+         alt="image of a lion"
+         />
+    <img src= "https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+          alt="image of a lion"
+          title="enjoy this image"
+          />
+
   </body>
 </html>
